Fixed horizontal scroll

--- a/my-work/number4/main.css
+++ b/my-work/number4/main.css
@@ -590,7 +590,7 @@ div#notify {
 #follows {
   position: absolute;
   width: 100px;
-  right: 18%;
+  right: 16%;
   top: -50px
 }
 
